--- a/moiroomserver/src/main/resources/application.yml
+++ b/moiroomserver/src/main/resources/application.yml
@@ -1,1 +1,13 @@
-
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306
+    hikari:
+      username: ssafy
+      password: ssafy123~
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
