--- a/moiroomserver/src/main/resources/application.yml
+++ b/moiroomserver/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S10P12A308?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
     hikari:
-      username: ssafy
-      password: ssafy123~
+      username: S10P12A308@stg-yswa-kr-practice-db-master.mariadb.database.azure.com
+      password: DkjJ9q7ZiB
   jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: none
     properties:
