--- a/moiroomserver/src/main/resources/application-s3.yml
+++ b/moiroomserver/src/main/resources/application-s3.yml
@@ -1,7 +1,7 @@
-spring:
-  config:
-    activate:
-      on-profile: dev
+#spring:
+#  config:
+#    activate:
+#      on-profile: s3
 
 cloud:
   aws:
