--- a/moiroomserver/src/main/resources/application-oauth.yml
+++ b/moiroomserver/src/main/resources/application-oauth.yml
@@ -1,7 +1,7 @@
 spring:
-  config:
-    activate:
-      on-profile: oauth
+#  config:
+#    activate:
+#      on-profile: oauth
   security:
     oauth2:
       client:
